--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1F0ABD05-4F3B-46FE-A1CD-5A2D4515B5C3}</ProjectGuid>
+    <ProjectGuid>{7A98E161-1102-4544-BE20-95F63DFD189E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Sistema_restaurante</RootNamespace>
-    <AssemblyName>Sistema_restaurante</AssemblyName>
+    <RootNamespace>Data</RootNamespace>
+    <AssemblyName>Data</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,6 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connection.cs" />
+    <Compile Include="ManualConnection.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ManualConnection.Designer.cs">
+      <DependentUpon>ManualConnection.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +61,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="ManualConnection.resx">
+      <DependentUpon>ManualConnection.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -76,19 +86,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <ProjectReference Include="..\Data\Data.csproj">
-      <Project>{7a98e161-1102-4544-be20-95f63dfd189e}</Project>
-      <Name>Data</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Logic\Logic.csproj">
       <Project>{da323f7a-10e3-43d1-84e4-b27c0eacd64f}</Project>
       <Name>Logic</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Presentation\Presentation.csproj">
-      <Project>{5fa0987a-ddc4-4763-9cc4-078e03d22699}</Project>
-      <Name>Presentation</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
